crates/bc-tui/tests/snapshots/snapshot_tests__tests__account_sidebar_empty.snap
---
source: crates/bc-tui/tests/snapshot_tests.rs
expression: output
---
╭ Accounts ─────────────────────────────────╮
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
╰───────────────────────────────────────────╯
