crates/bc-tui/tests/snapshots/snapshot_tests__tests__account_sidebar_with_accounts.snap
---
source: crates/bc-tui/tests/snapshot_tests.rs
expression: output
---
╭ Accounts ─────────────────────────────────╮
│  Assets —                                 │
│  Liabilities —                            │
│  Expenses —                               │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
╰───────────────────────────────────────────╯
