crates/bc-tui/tests/snapshots/snapshot_tests__tests__account_sidebar_with_balances.snap
---
source: crates/bc-tui/tests/snapshot_tests.rs
assertion_line: 200
expression: output
---
╭ Accounts ─────────────────────────────────╮
│  Assets AUD        1500.00                │
│  Liabilities AUD        -200.50           │
│  Expenses —                               │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
│                                           │
╰───────────────────────────────────────────╯
