crates/bc-tui/tests/snapshots/snapshot_tests__tests__transaction_list_empty.snap
---
source: crates/bc-tui/tests/snapshot_tests.rs
expression: output
---
╭ Transactions ────────────────────────────────────────────╮
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
╰──────────────────────────────────────────────────────────╯
