crates/bc-tui/tests/snapshots/snapshot_tests__tests__transaction_list_with_data.snap
---
source: crates/bc-tui/tests/snapshot_tests.rs
expression: output
---
╭ Transactions ────────────────────────────────────────────╮
│2026-01-10  Supermarket           —                       │
│2026-01-01  Landlord              —                       │
│2026-01-15  Café                  —                       │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
╰──────────────────────────────────────────────────────────╯
